--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@500&display=swap");
 
 * {
-    padding: 0px;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
